Fix Firefox issue with data not wrapping in textarea

--- a/custom/custom.scss
+++ b/custom/custom.scss
@@ -10,4 +10,8 @@
 
 h2.edit-indicator { display: none; }
 
+// Avoid text wrapping problem in Firefox
+textarea.input-data-edit { white-space: pre-wrap; }
+
 $color-gray-light: #F0F0F0;
+
